fixed bug in forEach iteration

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
         </div>
     </form>
     <div class="todo-container">
-        <ul class="todo-list">
-            <div class="todo">
-            </div>
-        </ul>
+        <ul class="todo-list"></ul>
     </div>
 
     <script src="./app.js"></script>
